// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`html generation should cut generated html if limits are exceeded 1`] = `
"AgID
IT
Test

testtesttesttesttesttesttesttesttesttest

 * Test
   
   * Test
     
     * Test
       
       * Test
         
         * Test
           
           * Test
             
             * Test
               
               * Test
                 
                 * Test
                   
                   * Test
                     
                     * Test
                       
                       * Test
                         
                         * Test
                           
                           * Test
                             
                             * Test
                               
                               * Test
                                 
                                 * Test
                                   
                                   * Test
                                     
                                     * Test
                                       
                                       * Test
                                         
                                         * Test
                                           
                                           * Test
                                             
                                             * Test
                                               
                                               * Test
                                                 
                                                 * Test
                                                   
                                                   * Test
                                                     
                                                     * Test
                                                       
                                                       * Test
                                                         
                                                         * Test
                                                           
                                                           * Test
                                                             
                                                             * Test
                                                               
                                                               * Test
                                                                 
                                                                 * Test
                                                                   
                                                                   * Test
                                                                     
                                                                     * Test
                                                                       
                                                                       * Test
                                                                         
                                                                         * Test
                                                                           
                                                                           * Test
                                                                             
                                                                             * Test
                                                                               
                                                                               * Test
                                                                                 
                                                                                 * Test
                                                                                   
                                                                                   * Test
                                                                                     
                                                                                     * Test
                                                                                       
                                                                                       * Test
                                                                                         
                                                                                         * Test
                                                                                           
                                                                                           * Test
                                                                                             
                                                                                             * Test
                                                                                               
                                                                                               * Test
                                                                                                 
                                                                                                 * Test
                                                                                                   
                                                                                                   * Test
                                                                                                     
                                                                                                     * Test
                                                                                                       
                                                                                                       * Test
                                                                                                         
                                                                                                         * Test
                                                                                                           
                                                                                                           * Test
                                                                                                             
                                                                                                             * Test
                                                                                                               
                                                                                                               * Test
                                                                                                                 
                                                                                                                 * Test
                                                                                                                   
                                                                                                                   * Test
                                                                                                                     
                                                                                                                     * Test
                                                                                                                       
                                                                                                                       * Test
                                                                                                                         
                                                                                                                         * Test
                                                                                                                           
                                                                                                                           * Test
                                                                                                                             
                                                                                                                             * Test
                                                                                                                               
                                                                                                                               * Test
                                                                                                                                 
                                                                                                                                 * Test
                                                                                                                                   
                                                                                                                                   * Test
                                                                                                                                     
                                                                                                                                     * Test
                                                                                                                                       
                                                                                                                                       * Test
                                                                                                                                         
                                                                                                                                         * Test
                                                                                                                                           
                                                                                                                                           * Test
                                                                                                                                             
                                                                                                                                             * Test
                                                                                                                                               
                                                                                                                                               * Test
                                                                                                                                                 
                                                                                                                                                 * Test
                                                                                                                                                   
                                                                                                                                                   * Test
                                                                                                                                                     
                                                                                                                                                     * Test
                                                                                                                                                       
                                                                                                                                                       * Test
                                                                                                                                                         
                                                                                                                                                         * Test
                                                                                                                                                           
                                                                                                                                                           * Test
                                                                                                                                                             
                                                                                                                                                             * Test
                                                                                                                                                               
                                                                                                                                                               * Test
                                                                                                                                                                 
                                                                                                                                                                 * Test
                                                                                                                                                                   
                                                                                                                                                                   * Test
                                                                                                                                                                     
                                                                                                                                                                     * Test
                                                                                                                                                                       
                                                                                                                                                                       * Test
                                                                                                                                                                         
                                                                                                                                                                         * Test
                                                                                                                                                                           
                                                                                                                                                                           * Test
                                                                                                                                                                             
                                                                                                                                                                             * Test
                                                                                                                                                                               
                                                                                                                                                                               * Test
                                                                                                                                                                                 
                                                                                                                                                                                 * Test
                                                                                                                                                                                   
                                                                                                                                                                                   * Test
                                                                                                                                                                                     
                                                                                                                                                                                     * Test
                                                                                                                                                                                       
                                                                                                                                                                                       * Test
                                                                                                                                                                                         
                                                                                                                                                                                         * Test
                                                                                                                                                                                           
                                                                                                                                                                                           * Test
                                                                                                                                                                                             
                                                                                                                                                                                             * Test
                                                                                                                                                                                               
                                                                                                                                                                                               * ...



Non rispondere a questa email. Questa casella di posta è
utilizzata solo per l'invio della presente mail e, non
essendo monitorata, non riceveresti risposta.

Hai ricevuto questa comunicazione perché le tue preferenze
nell’App IO [https://io.italia.it/] indicano che hai
abilitato l’inoltro via email dei messaggi relativi al
servizio in oggetto.
Se non vuoi più ricevere le comunicazioni relative a questo
servizio, puoi modificare le tue preferenze nella relativa
scheda servizio all’interno dell’App IO.
Puoi anche disattivare l’inoltro dei messaggi via email per
tutti i servizi, selezionando l'opzione “Disabilita per
tutti i servizi” che trovi in \\"Profilo\\" > \\"Preferenze\\" >
\\"Inoltro dei messaggi via email\\"."
`;

exports[`html generation should generate html from markdown 1`] = `
"AgID
IT
Test

testtesttesttesttesttesttesttesttesttest

testtesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttest



Non rispondere a questa email. Questa casella di posta è
utilizzata solo per l'invio della presente mail e, non
essendo monitorata, non riceveresti risposta.

Hai ricevuto questa comunicazione perché le tue preferenze
nell’App IO [https://io.italia.it/] indicano che hai
abilitato l’inoltro via email dei messaggi relativi al
servizio in oggetto.
Se non vuoi più ricevere le comunicazioni relative a questo
servizio, puoi modificare le tue preferenze nella relativa
scheda servizio all’interno dell’App IO.
Puoi anche disattivare l’inoltro dei messaggi via email per
tutti i servizi, selezionando l'opzione “Disabilita per
tutti i servizi” che trovi in \\"Profilo\\" > \\"Preferenze\\" >
\\"Inoltro dei messaggi via email\\"."
`;
